🔒 Fix Content Security Policy for Google Analytics
✅ Added required domains to CSP for Firebase Analytics
- script-src: Added https://www.googletagmanager.com
- connect-src: Added https://www.google-analytics.com and https://analytics.google.com

🐛 Resolves CSP violation error:
- Firebase Analytics now loads properly
- Google Tag Manager scripts allowed
- Analytics data collection functional

Maintains security while enabling proper analytics tracking.

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://firebasejs.googleapis.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://firebasejs.googleapis.com https://*.firebaseio.com https://*.googleapis.com wss://*.firebaseio.com; object-src 'none'; base-uri 'self'; frame-ancestors 'none';">
-<meta http-equiv="X-Content-Type-Options" content="nosniff">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://firebasejs.googleapis.com https://www.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://firebasejs.googleapis.com https://*.firebaseio.com https://*.googleapis.com https://www.google-analytics.com https://analytics.google.com wss://*.firebaseio.com; object-src 'none'; base-uri 'self'; frame-ancestors 'none';">\n<meta http-equiv="X-Content-Type-Options" content="nosniff">
 <meta http-equiv="X-Frame-Options" content="DENY">
 <meta http-equiv="X-XSS-Protection" content="1; mode=block">
 <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
@@ -97,9 +96,13 @@
 <!-- Publisher manifest -->
 <link rel="publisher" href="/publisher.json" type="application/json">
 
-<!-- Optional keywords (fine to keep light) -->
-<meta name="keywords" content="DigestPaper, uitgever, journalistiek, fact-checking, correcties, transparantie, onderzoeksjournalistiek, Nederland">
-<meta name="news_keywords" content="uitgever, journalistiek beleid, transparantie, fact-checking, correcties">
+<!-- Optional keywords (comprehensive) -->
+<meta name="keywords" content="DigestPaper, uitgever, redactionele richtlijnen, journalistiek, fact-checking, correcties, financiering, transparantie, media, Nederland, onderzoeksjournalistiek, onafhankelijke media">
+<meta name="news_keywords" content="uitgever, journalistiek beleid, transparantie, fact-checking, correcties, onderzoeksjournalistiek">
+<meta name="classification" content="News, Journalism, Publisher">
+<meta name="coverage" content="Worldwide">
+<meta name="distribution" content="Global">
+<meta name="rating" content="General">
 
 <!-- Geo (optional) -->
 <meta name="geographic.region" content="NL">
@@ -118,15 +121,6 @@
 <meta name="dc.language" content="nl-NL">
 <meta name="dc.coverage" content="Nederland; EU; Wereldwijd">
 <meta name="dc.rights" content="Copyright 2025 DigestPaper Publishing B.V.">
-
-  <!-- Primary SEO (aanvullingen) -->
-  <meta name="keywords"
-    content="DigestPaper, uitgever, redactionele richtlijnen, journalistiek, fact-checking, correcties, financiering, transparantie, media, Nederland, onderzoeksjournalistiek, onafhankelijke media">
-  <meta name="news_keywords" content="uitgever, journalistiek beleid, transparantie, fact-checking, correcties, onderzoeksjournalistiek">
-  <meta name="classification" content="News, Journalism, Publisher">
-  <meta name="coverage" content="Worldwide">
-  <meta name="distribution" content="Global">
-  <meta name="rating" content="General">
 
 <!-- CSS & scripts -->
 <link rel="stylesheet" href="/css/style.css">
