--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://firebasejs.googleapis.com https://www.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://firebasejs.googleapis.com https://www.gstatic.com https://*.firebaseio.com https://*.googleapis.com https://www.google-analytics.com https://analytics.google.com wss://*.firebaseio.com; object-src 'none'; base-uri 'self'; frame-ancestors 'none';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://firebasejs.googleapis.com https://www.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://firebasejs.googleapis.com https://www.gstatic.com https://*.firebaseio.com https://*.googleapis.com https://www.google-analytics.com https://analytics.google.com wss://*.firebaseio.com; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
-<meta http-equiv="X-Frame-Options" content="DENY">
+
 <meta http-equiv="X-XSS-Protection" content="1; mode=block">
 <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
 <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=(), payment=(), usb=(), magnetometer=(), gyroscope=(), accelerometer=()"><!-- Primary SEO -->
@@ -1598,11 +1598,11 @@
           <form id="login-form-element">
             <div class="form-group">
               <label for="login-email">E-mail</label>
-              <input type="email" id="login-email" required>
+              <input type="email" id="login-email" autocomplete="email" required>
             </div>
             <div class="form-group">
               <label for="login-password">Wachtwoord</label>
-              <input type="password" id="login-password" required>
+              <input type="password" id="login-password" autocomplete="current-password" required>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary">Inloggen</button>
@@ -1616,15 +1616,15 @@
           <form id="register-form-element">
             <div class="form-group">
               <label for="register-email">E-mail</label>
-              <input type="email" id="register-email" required>
+              <input type="email" id="register-email" autocomplete="email" required>
             </div>
             <div class="form-group">
               <label for="register-password">Wachtwoord</label>
-              <input type="password" id="register-password" required>
+              <input type="password" id="register-password" autocomplete="new-password" required>
             </div>
             <div class="form-group">
               <label for="register-confirm-password">Bevestig wachtwoord</label>
-              <input type="password" id="register-confirm-password" required>
+              <input type="password" id="register-confirm-password" autocomplete="new-password" required>
             </div>
             <div class="form-group">
               <button type="submit" class="btn btn-primary">Registreren</button>
@@ -1681,7 +1681,7 @@
         <form id="newsletter-form">
           <div class="form-group">
             <label for="newsletter-email">Blijf op de hoogte van het laatste nieuws</label>
-            <input type="email" id="newsletter-email" placeholder="E-mailadres" required>
+            <input type="email" id="newsletter-email" placeholder="E-mailadres" autocomplete="email" required>
           </div>
           <button type="submit" class="btn btn-primary">Inschrijven</button>
         </form>
@@ -1805,11 +1805,11 @@
         <form id="loginForm" style="display: block;">
           <div class="form-group">
             <label for="loginEmail">E-mail</label>
-            <input type="email" id="loginEmail" required>
+            <input type="email" id="loginEmail" autocomplete="email" required>
           </div>
           <div class="form-group">
             <label for="loginPassword">Wachtwoord</label>
-            <input type="password" id="loginPassword" required>
+            <input type="password" id="loginPassword" autocomplete="current-password" required>
           </div>
           <div class="form-actions">
             <button type="submit" class="btn btn-primary">Inloggen</button>
@@ -1831,15 +1831,15 @@
           </div>
           <div class="form-group">
             <label for="registerEmail">E-mail</label>
-            <input type="email" id="registerEmail" required>
+            <input type="email" id="registerEmail" autocomplete="email" required>
           </div>
           <div class="form-group">
             <label for="registerPassword">Wachtwoord</label>
-            <input type="password" id="registerPassword" required>
+            <input type="password" id="registerPassword" autocomplete="new-password" required>
           </div>
           <div class="form-group">
             <label for="registerConfirmPassword">Bevestig wachtwoord</label>
-            <input type="password" id="registerConfirmPassword" required>
+            <input type="password" id="registerConfirmPassword" autocomplete="new-password" required>
           </div>
           <div class="form-actions">
             <button type="submit" class="btn btn-primary">Registreren</button>
@@ -2092,7 +2092,7 @@
           <h2>Nieuwsbrief</h2>
           <p style="color: var(--muted); margin-bottom: 1.5rem;">Blijf op de hoogte van het laatste nieuws</p>
           <form id="newsletterForm" style="display: flex; flex-direction: column; gap: 1rem;">
-            <input type="email" id="newsletter-email" placeholder="E-mailadres" required
+            <input type="email" id="newsletter-email" placeholder="E-mailadres" autocomplete="email" required
                    style="padding: 0.75rem; border: 1px solid var(--border); border-radius: 0.5rem; background: var(--card); color: var(--fg);">
             <button type="submit" class="cta">Inschrijven</button>
           </form>
@@ -2474,9 +2474,15 @@
     // Performance monitoring and error handling
     window.addEventListener('load', function () {
       // Log page load performance
-      if (window.performance && window.performance.timing) {
-        const loadTime = window.performance.timing.loadEventEnd - window.performance.timing.navigationStart;
-        console.log('Page load time:', loadTime + 'ms');
+      if (window.performance) {
+        if (window.performance.timing && window.performance.timing.loadEventEnd > 0) {
+          const loadTime = window.performance.timing.loadEventEnd - window.performance.timing.navigationStart;
+          console.log('Page load time:', loadTime + 'ms');
+        } else {
+          // Fallback for modern browsers
+          const loadTime = Math.round(performance.now());
+          console.log('Page load time (since navigation start):', loadTime + 'ms');
+        }
       }
     });
 
