--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Security Headers -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://firebasejs.googleapis.com https://www.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://firebasejs.googleapis.com https://www.gstatic.com https://*.firebaseio.com https://*.googleapis.com https://www.google-analytics.com https://analytics.google.com wss://*.firebaseio.com; object-src 'none'; base-uri 'self';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://firebasejs.googleapis.com https://www.gstatic.com https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://firebasejs.googleapis.com https://www.gstatic.com https://*.firebaseio.com https://*.googleapis.com https://www.google-analytics.com https://analytics.google.com https://*.google-analytics.com wss://*.firebaseio.com; object-src 'none'; base-uri 'self';">
 <meta http-equiv="X-Content-Type-Options" content="nosniff">
 
 <meta http-equiv="X-XSS-Protection" content="1; mode=block">
